--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,8 @@ local.properties
 proguard/
 
 # Log Files
+.idea/
+logs/
 *.log
 
 # Android Studio Navigation editor temp files
@@ -38,6 +40,7 @@ captures/
 
 # IntelliJ
 *.iml
+.idea/
 .idea/workspace.xml
 .idea/tasks.xml
 .idea/gradle.xml
