Server tests shaping up

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -4,7 +4,7 @@ ktor {
     port = ${?PORT}
   }
   application {
-    modules = [org.codingforanimals.veganacademy.ApplicationKt.module]
+    modules = [org.codingforanimals.veganacademy.ApplicationKt.run]
   }
 
   jwt {
@@ -21,5 +21,6 @@ ktor {
     jdbcDatabaseUrl = "jdbc:postgresql:veganacademy"
     dbUser = postgres
     dbPassword = 123123
+    maxPoolSize = 3
   }
 }
