--- a/gradle.properties
+++ b/gradle.properties
@@ -7,5 +7,6 @@ hikaricp_version=5.0.0
 postgres_version=42.3.1
 mockk_version=1.12.0
 koin_version=3.1.3
+#koin_version=3.0.1
 jbcrypt_version=0.4
 h2_version=1.4.200
