--- a/gradle.properties
+++ b/gradle.properties
@@ -1,12 +1,12 @@
 ktor_version=1.6.5
 kotlin_version=1.6.0
-logback_version=1.2.6
+logback_version=1.2.7
 kotlin.code.style=official
 exposed_version=0.36.1
 hikaricp_version=5.0.0
 postgres_version=42.3.1
 mockk_version=1.12.0
 koin_version=3.1.3
-#koin_version=3.0.1
 jbcrypt_version=0.4
 h2_version=1.4.200
+kotlin_coroutines_version=1.6.0-RC
