refactored package name adding .server

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -4,7 +4,7 @@ ktor {
     port = ${?PORT}
   }
   application {
-    modules = [org.codingforanimals.veganacademy.ApplicationKt.run]
+    modules = [org.codingforanimals.veganacademy.server.ApplicationKt.run]
   }
 
   jwt {
