--- a/gradle.properties
+++ b/gradle.properties
@@ -1,12 +1,12 @@
-ktor_version=1.6.5
+ktor_version=2.1.3
 kotlin_version=1.6.0
-logback_version=1.2.7
+logback_version=1.4.5
 kotlin.code.style=official
-exposed_version=0.36.1
-hikaricp_version=5.0.0
-postgres_version=42.3.1
-mockk_version=1.12.0
-koin_version=3.1.3
+exposed_version=0.40.1
+hikaricp_version=5.0.1
+postgres_version=42.5.1
+mockk_version=1.13.2
+koin_version=3.2.2
 jbcrypt_version=0.4
-h2_version=1.4.200
-kotlin_coroutines_version=1.6.0-RC
+h2_version=2.1.214
+kotlin_coroutines_version=1.6.4
